refactor : 불변 상태로 변경