@@ -1,5 +1,6 @@
 package lotto.domain;
 
+import java.util.Collections;
 import java.util.List;
 import lotto.validator.LottoNumberValidator;
 
@@ -7,6 +8,6 @@ public record Lotto(List<Integer> numbers) {
 
     public Lotto(List<Integer> numbers) {
         LottoNumberValidator.isValid(numbers);
-        this.numbers = List.copyOf(numbers);
+        this.numbers = Collections.unmodifiableList(numbers);
     }
 }
